# 42sh

./: .gitignore  Doxyfile  Makefile.am  Makefile.am.coverage  README  README.md  autogen.sh  build-system.sh  configure.ac
.github/workflows/: doxygen.yml
docs/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  test_8c.html
docs/search/: files_0.js
m4/: debug.m4  gcov.m4
src/: Makefile  Makefile.am  main.c  test.c
src/ast/: Makefile.am  ast.c  ast.h
src/ast/node_func/: case_node.c  for_node.c  func_node.c  if_node.c  list_node.c  pipeline_node.c  redirection_node.c  sc_node.c  until_node.c  while_node.c
src/ast/tests/: Makefile.am
src/builtins/: Makefile.am  builtin_alias.c  builtin_break.c  builtin_cd.c  builtin_continue.c  builtin_dot.c  builtin_echo.c  builtin_exit.c  builtin_export.c  builtin_true_false.c  builtin_unalias.c  builtin_unset.c  builtin_zouzoulkowsky.c  builtins.c  builtins.h
src/error_handling/: Makefile.am  error_handling.c  error_handling.h  error_handling_execvp.c  error_handling_execvp.h
src/execution/: Makefile.am  break_continue_number.c  exec.c  exec.h  exec_and_or.c  exec_case.c  exec_condition.c  exec_for.c  exec_func.c  exec_list.c  exec_neg.c  exec_pipeline.c  exec_redirections.c  exec_simple_command.c  exec_subshell.c  exec_until.c  exec_while.c
src/expansion/: CDPATH_variable.c  HOME_variable.c  Makefile.am  command_substitution.c  expansion.c  expansion.h  param_expansion.c  param_expansion.h  quote_expansion.c  quote_expansion.h  special_variables.c  special_variables.h
src/io/: Makefile.am  io.c  io.h
src/io_backend/: Makefile.am  io_backend.c  io_backend.h
src/io_backend/tests/: Makefile.am
src/lexer/: Makefile.am  expansion.c  lexer.c  lexer.c.bak  lexer.h  lexer_error.c  lexer_error.h  lexer_setup.c  lexer_setup.h  token.c  token.h  token_recognition.c  token_recognition.h  token_recognition_helpers.c  token_recognition_helpers.h  token_recognition_quoting.c
src/lexer/tests/: Makefile.am  test_lexer.c
src/options/: Makefile.am  opt_parser.c  opt_parser.h
src/options/tests/: Makefile.am
src/parser/: Makefile.am  parser.c  parser.h
src/parser/rule/: parser.c.bak  parser_and_or.c  parser_command.c  parser_compound_list.c  parser_element.c  parser_else_clause.c  parser_fundec.c  parser_input.c  parser_list.c  parser_pipeline.c  parser_prefix.c  parser_redirection.c  parser_rule_case.c  parser_rule_for.c  parser_rule_if.c  parser_rule_until.c  parser_rule_while.c  parser_shell_command.c  parser_simple_command.c
src/parser/tests/: Makefile.am
src/utils/: Makefile.am  utils.c  utils.h
src/utils/assignment_words/: assignment_words.c  assignment_words.h
src/utils/dot_file/: dot_file.c  dot_file.h
src/utils/hash_map/: hash_map.c  hash_map.h  hash_map_setup.c  hash_map_setup.h  hash_map_use.c
src/utils/memory/: memory.c  memory.h
src/utils/my_realpath/: my_realpath.c  my_realpath.h
src/utils/printers/: printers.c  printers.h
src/utils/stack/: stack.h  stack_setup.c  stack_use.c
src/utils/strings/: strings.c  strings.h
src/utils/token/: token.c  token.h
src/utils/variables/: special_variables.c  variables.c  variables.h
tests/: Makefile.am
tests/ast/: Makefile.am
tests/categories/: testsuite.sh
tests/categories/if/: if.test  if1.test  testsuite.sh
tests/categories/simple_commands/: testsuite.sh
tests/categories/syntax/: bad.test  testsuite.sh
tests/functionals-tests/: Makefile.am  testsuite.sh
tests/functionals-tests/categories/: testsuite.sh
tests/functionals-tests/categories/alias/: alias_function_def.test  alias_list.test  alias_mult_word_sub.test  alias_quotes.test  alias_quotes_2.test  bad_unalias.test  simple_alias.test  simple_unalias.test  testsuite.sh  unalias_all.test  unalias_list.test  void_alias.test  void_alias_double_quote.test  void_alias_single_quote.test
tests/functionals-tests/categories/and-or/: command_and-or.test  simple_and-or.test  testsuite.sh
tests/functionals-tests/categories/bad_substitutions/: bad_in_var_assign.test  testsuite.sh
tests/functionals-tests/categories/break_continue/: break_basic.test  break_compound.test  break_function.test  break_minus.test  break_more.test  break_more_than_exists.test  break_string.test  break_tricky.test  break_two_args.test  break_two_args_invalid.test  break_two_args_valid.test  break_two_break.test  break_two_loops1.test  break_two_loops2.test  break_zero.test  continue_basic.test  continue_minus.test  continue_more_than_exists.test  continue_tricky.test  continue_two_loops.test  continue_two_loops2.test  function_break.test  function_break2.test  function_break3.test  hard_continue3.test  testsuite.sh
tests/functionals-tests/categories/builtins/: ascii_house.test  complex_alias.test  complex_exit.test  echo1.test  exit_without_arg.test  fuck_malloc1.test  fuck_malloc2.test  list_of_true_false.test  simple_cd.test  simple_dot.test  simple_exit.test  testsuite.sh
tests/functionals-tests/categories/case/: asterix1.test  asterix2.test  asterix3.test  basic.test  case_in_for.test  casual.test  casual_valid.test  no_body.test  no_compound_list.test  no_esac.test  no_in.test  no_semicolon.test  quoted.test  simple_pattern_matching.test  testsuite.sh  three_semicolon.test  three_semicolon2.test  three_semicolon3.test  three_semicolon4.test
tests/functionals-tests/categories/clang-format/: testsuite.sh
tests/functionals-tests/categories/cmd_substitution/: ambiguous.sh  backtick_double_quotes.sh  backtick_in_backtick.sh  basic_backtick.test  basic_paren.test  empty_backtick.test  empty_paren.test  error_in_sub.sh  many.sh  multiple_back.sh  multiple_paren.sh  par_in_quotes.sh  par_in_sub.sh  paren_and_back.sh  paren_double_quoted.sh  paren_in_paren.sh  (+2 more)
tests/functionals-tests/working-dir/: foo  sym_bar2
tests/units-tests/ast/: Makefile.am
tests/units-tests/io/: test_io_backend.c
tests/units-tests/io_backend/: Makefile.am
tests/units-tests/lexer/: Makefile.am
tests/units-tests/options/: Makefile.am
tests/units-tests/parser/: Makefile.am
tests/units-tests/utils/: Makefile.am  test_utils.c
(+254 files in other folders)
